--- a/src/fsharp/fsi/Fsi.fsproj
+++ b/src/fsharp/fsi/Fsi.fsproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (c) Microsoft Open Technologies, Inc.  All Rights Reserved.  Licensed under the Apache License, Version 2.0.  See License.txt in the project root for license information. -->
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
@@ -39,6 +39,9 @@
     </Compile>
     <Compile Include="console.fs">
       <Link>Console/console.fs</Link>
+    </Compile>
+    <Compile Include="LiveReload.fs">
+      <Link>LiveReload.fs</Link>
     </Compile>
     <Compile Include="fsi.fs">
       <Link>InteractiveSession/fsi.fs</Link>
